Criado meus métodos